# uiflow-micropython

./: .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yaml  README.md  pyproject.toml  pyrightconfig.json  sdkconfig
.github/agents/: git-commit.agent.md
.github/prompts/: docs.prompt.md  en2zh.prompt.md
.github/workflows/: build-firmware.yml  build-release.yml  code_formatting.yml  nightly-build.yml  ports_m5stack.yml
docs/: .gitignore  Makefile  README.md  make.bat  requirements.txt
docs/en/: COPYRIGHT.rst  conf.py  index.rst
docs/source/: COPYRIGHT.rst  conf.py
docs/zh_CN/: COPYRIGHT.rst  conf.py  index.rst
m5stack/: CMakeLists.txt  CMakeListsDefault.cmake  CMakeListsLvgl.cmake  Makefile  README.md  _vfs_stream.c  _vfs_stream.h  board.cpp  board.h  esp32_common.cmake  esp32_nvs.c  machine_hw_spi.c  machine_i2c.c  machine_rtc.c  machine_sdcard.c  main.c  makeimg.py  modesp32.c  modutime.c  network_lan.c  network_ppp.c  network_wlan.c  partition_nvs.csv  partitions.csv  partitions_12mb.csv  partitions_16mb.csv  partitions_16mb_omv.csv  partitions_4mb.csv  partitions_8mb.csv  partitions_8mb_lvgl.csv  version.txt
m5stack/boards/: CMakeLists.txt  Kconfig  manifest.py  manifest_m5stack.py  mpconfiglvgl.h  sdkconfig.base  sdkconfig.ble  sdkconfig.disable_iram  sdkconfig.flash_12mb  sdkconfig.flash_16mb  sdkconfig.flash_16mb_omv  sdkconfig.flash_4mb  sdkconfig.flash_8mb  sdkconfig.spiram  sdkconfig.spiram_sx  sdkconfig.usb  sdkconfig.usb_cdc
m5stack/cmodules/: cmodules.cmake
m5stack/components/libffi/: CMakeLists.txt
m5stack/components/libffi/libffi/include/riscv/: ffi.h  fficonfig.h
m5stack/components/libffi/libffi/include/xtensa/: ffi.h
m5stack/components/libffi/libffi/src/riscv/: ffi.cpp
m5stack/components/libffi/libffi/src/xtensa/: sysv.S
m5stack/components/m5things/: CMakeLists.txt  README.md  crypto.c  m5things.c
m5stack/components/m5things/include/: boards.h  crypto.h  m5things.h
m5stack/fs/: README.md  boot.py  main.py
m5stack/include/: files.mk
m5stack/libs/: README.md  attitude_estimator.py  boot_option.py  color_conv.py  hardware.py  label_plus.py  m5camera.py  manifest.py  manifest_basic.py  pid.py  urequests.py  warnings.py
m5stack/libs-py/: README.md
m5stack/main/: CMakeLists.txt  CMakeListsDefault.cmake  CMakeListsLvgl.cmake  idf_component.yml
m5stack/main_esp32/: CMakeLists.txt  idf_component.yml
m5stack/main_esp32c3/: CMakeLists.txt
m5stack/main_esp32c6/: CMakeLists.txt
m5stack/main_esp32s2/: CMakeLists.txt
m5stack/main_esp32s3/: CMakeLists.txt
m5stack/modules/: README.md  _boot.py  flashbdev.py  inisetup.py  manifest.py
m5stack/patches/: 0001_mpconfigport_lvgl_support.patch  0002_avoid_lv_bindings_compile_error.patch  0003-avoid-lv_bindings-compile-error.patch  0003-modtime-Add-timezone.patch  0004-add-lv-demo-benchmark.patch  0004-micropython-1.24-machine-adc-v5.x.diff  0005-micropython-fix-SDCard-16223.patch  0006-modtime-add-timezone-method.patch  0007-Add-set-default-netif-method.patch  0008-machine_uart-add-uart-mode.patch  0009-micropython-1.25.0-add-esp32p4-pins.patch  0010-micropython-1.25.0-machine-adc-v5.x.patch  0011-micropython-1.25.0-fix-esp32-p4-pwm.patch  0012-micropython-1.25.0-fix-esp32-p4-modesp32.patch  0013-micropython-1.25.0-fix-touchpad.patch  0014-micropython-1.25.0-fix-timer.patch  0015-micropython-1.25.0-fix-hostname.patch  0016-micropython-1.25.0-fix-mpnimbleport.patch  0017-micropython-1.25.0-add-uart-mode.patch  0018-micropython-1.25.0-support-esp-idf-v5.4.2.patch  0019-micropython-1.25.0-add-getsockname.patch  0020-micropython-1.25.0-modtime.patch  0021-micropython-1.25.0-i2c-probe.patch  1000-WIP-Compatible-with-esp-adf-v2.6.patch  1001-Fix-I2C-timeout.patch  1003-WIP-Compatible-with-esp-adf-v2.7.diff  1004-idf_v5.4_freertos.patch  2000-M5Unified-support-atoms3u.patch  2000-add-montserrat-font.patch  2001-Support-LTR553.patch  2002-M5Unified-fix-LTR553.patch  2003-Support-LTR553.patch  2004-Support-AtomS3R.patch  2005-Support-LTR553.patch  2006-Support-LTR553.patch  2007-Support-UnitC6L.patch  2008-Only-use-old-rmt-driver.patch  2009-fix-SoftI2C.patch  2010-Support-Nesso-N1.patch  2011-Add-DualKey.patch  (+23 more)
m5stack/test/: test.py  test2.py
seeed/: CMakeLists.txt  CMakeListsDefault.cmake  CMakeListsLvgl.cmake  Makefile  esp32_common.cmake  partitions_8mb.csv
seeed/boards/: manifest_m5stack.py  sdkconfig.240mhz  sdkconfig.base  sdkconfig.flash_4mb  sdkconfig.nimble_core0  sdkconfig.nimble_core1  sdkconfig.usb
seeed/cmodules/: cmodules.cmake
seeed/modules/: M5.py  README.md  _boot.py  flashbdev.py  manifest.py
tests/: README.md
tests/bluetooth/: test_bleuart_client.m5f2  test_bleuart_client.py  test_bleuart_server.m5f2  test_bleuart_server.py
tests/display/: camera.py  draw_circle.py  draw_image.py  drawcircle.py  drawimage.py  fille_circle.py  fillecircle.py  multi_display.py  text_scroll.py  textscroll.py  touch.py  user_lcd.py
tests/esp32/: test_nvs.m5f2  test_nvs.py
tests/hardware/: button_cb.py  test_rtc.m5f2  test_rtc.py  test_sdcard.m5f2  test_sdcard.py  test_wdt.m5f2  test_wdt.py  user_speaker.py
tests/lvgl/: benchmark.py  image.py  label.py  multiple_display.py
tests/m5ui/: test_bar.py  test_buttonmatrix.py  test_chart.py  test_dropdown.py  test_led.py  test_roller.py  test_slider.py  test_spinbox.py
tests/module/: dual_kmeter.m5f2  dual_kmeter.py
tests/uint/: adc.py  color.py  dac.py  env.py  extio2.py  pahub.py  test_cardkb.m5f2  test_cardkb.py  test_finger.py.m5f2  test_label_plus.m5f2  test_label_plus.py  test_light.py  test_ncir.py  test_pir.m5f2  test_relay.m5f2  test_relay.py  tof.py
tests/unit/: adc.py  color.py  dac.py  env.py  extio2.m5f2  extio2.py  pahub.py  test_cardkb.py  test_label_plus.py  test_light.m5f2  test_light.py  test_lora_e220_jp.py  test_lora_e220_jp_2.py  test_ncir.m5f2  test_ncir.py  tof.py
tests/widgets/: test_image_plus.m5f2  test_image_plus.py
tools/: README.md  ci.sh  codeformat.py  fs_packed.py  gen_stubs.py  http_server.py  nvs_partition_gen.py  parse_backtrace.py  release.py  tcp_server.py  verifygitlog.py
(+3642 files in other folders)
